--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -83,11 +83,11 @@
                         <li>Fugazzeta</li>
                         <li>Jamón Y Morrón</li>
                         <li>Cheddar y Bacon</li>
-                        <li>Napolitana con Jamón (tomate,jamon y aderezo de ajo)</li>
+                        <li>Napolitana con Jamón (tomate,jamon y ajo)</li>
                         <li>Calabresa</li>
                         <li>Jamón con Morrón y Huevo</li>
                         <li>Fugazzetta con Jamón</li>
-                        <li>Napolitana(Tomate y aderezo de ajo)</li>
+                        <li>Napolitana(Tomate y ajo)</li>
                     </ul>
                 </div>
             </div>
@@ -156,11 +156,11 @@
                 <img src="images/empanada12.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h4>ROQUEFORT Y JAMON</h4>
+                <h4>ROQUEFORT</h4>
                 <img src="images/empanada11.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h4>BROCOLI Y CHAMPIÑONES</h4>
+                <h4>Brocoli y Champiñones</h4>
                 <img src="images/empanada10.jpg" alt="Corn Empanada">
             </div>
         </div>
