--- a/menu-ingles.html
+++ b/menu-ingles.html
@@ -170,7 +170,7 @@
                 <img src="images/empanada8.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h4>Onion and Cheese</h4>
+                <h4>ONION AND CHEESE</h4>
                 <span class="translation">(Cebolla y Queso)</span>
                 <img src="images/empanada9.jpg" alt="Corn Empanada">
             </div>
@@ -185,7 +185,7 @@
                 <img src="images/empanada11.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h4>BROCCOLI AND MUSHROOMS</h4>
+                <h3>BROCCOLI AND MUSHROOMS</h3>
                 <span class="translation">(Brocoli y Champiñones)</span>
                 <img src="images/empanada10.jpg" alt="Corn Empanada">
             </div>
