--- a/menu-portugues.html
+++ b/menu-portugues.html
@@ -180,12 +180,12 @@
                 <img src="images/empanada12.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h4>ROQUEFORT E PRESUNTO</h4>
+                <h4>ROQUEFORT</h4>
                 <span class="translation">(Roquefort)</span>
                 <img src="images/empanada11.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h4>BROCCOLIS E COGUMELOS</h4>
+                <h3>BROCCOLIS E COGUMELOS</h3>
                 <span class="translation">(Brocoli y Champiñones)</span>
                 <img src="images/empanada10.jpg" alt="Corn Empanada">
             </div>
