--- a/menu-ruso.html
+++ b/menu-ruso.html
@@ -180,12 +180,12 @@
                 <img src="images/empanada12.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h4>РОКФОР И ВЕТЧИНА</h4>
+                <h4>РОКФОР </h4>
                 <span class="translation">(Roquefort)</span>
                 <img src="images/empanada11.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h4>БРОККОЛИ И ГРИБЫ</h4>
+                <h3>БРОККОЛИ И ГРИБЫ</h3>
                 <span class="translation">(Brocoli y Champiñones)</span>
                 <img src="images/empanada10.jpg" alt="Corn Empanada">
             </div>
