--- a/menu-portugues.html
+++ b/menu-portugues.html
@@ -135,7 +135,7 @@
                 <img src="images/empanada1.jpg" alt="Empanada de Carne">
             </div>
             <div class="empanada-item">
-                <h4>PRESUNTO E QUEIJO</h4>
+                <h3>Presunto E Queijo</h3>
                 <span class="translation">(Jamón y queso)</span>
                 <img src="images/empanada2.jpg" alt="Empanada de Presunto e Queijo">
             </div>
@@ -185,7 +185,7 @@
                 <img src="images/empanada11.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h3>BROCCOLIS E COGUMELOS</h3>
+                <h2>BROCCOLIS E COGUMELOS</h2>
                 <span class="translation">(Brocoli y Champiñones)</span>
                 <img src="images/empanada10.jpg" alt="Corn Empanada">
             </div>
