--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -161,7 +161,7 @@
             </div>
             <div class="empanada-item">
                 <h6>Brocoli y Champiñones</h6>
-                <img src="images/empanada10.jpg" alt="Corn Empanada">
+                <img src="images/empanada10.jpg" alt="Empanada Brocoli">
             </div>
         </div>
     </div>
