--- a/menu-ingles.html
+++ b/menu-ingles.html
@@ -185,7 +185,7 @@
                 <img src="images/empanada11.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h6>BROCCOLI AND MUSHROOMS</h6>
+                <h4>Broccoli and Mushrooms</h4>
                 <span class="translation">(Brocoli y Champiñones)</span>
                 <img src="images/empanada10.jpg" alt="Corn Empanada">
             </div>
