--- a/menu-portugues.html
+++ b/menu-portugues.html
@@ -135,7 +135,7 @@
                 <img src="images/empanada1.jpg" alt="Empanada de Carne">
             </div>
             <div class="empanada-item">
-                <h3>Presunto E Queijo</h3>
+                <h4>Presunto E Queijo</h4>
                 <span class="translation">(Jamón y queso)</span>
                 <img src="images/empanada2.jpg" alt="Empanada de Presunto e Queijo">
             </div>
@@ -185,8 +185,8 @@
                 <img src="images/empanada11.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h6>BROCCOLIS E COGUMELOS</h6>
-                <span class="translation">(Brocoli y Champiñones)</span>
+                <h4>Broccoli e Cogumelos</h4>
+                <span class="translation">(Brocoli y Champi)</span>
                 <img src="images/empanada10.jpg" alt="Corn Empanada">
             </div>
         </div>
