--- a/menu-ruso.html
+++ b/menu-ruso.html
@@ -186,7 +186,7 @@
             </div>
             <div class="empanada-item">
                 <h6>БРОККОЛИ И ГРИБЫ</h6>
-                <span class="translation">(Brocoli y Champiñones)</span>
+                <span class="translation">(Brocoli)</span>
                 <img src="images/empanada10.jpg" alt="Corn Empanada">
             </div>
         </div>
