--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -160,7 +160,7 @@
                 <img src="images/empanada11.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h5>Brocoli y Champiñones</h5>
+                <h5>BROCOLI Y CHAMPIÑON</h5>
                 <img src="images/empanada10.jpg" alt="Empanada Brocoli">
             </div>
         </div>
