--- a/menu-ruso.html
+++ b/menu-ruso.html
@@ -187,7 +187,7 @@
             <div class="empanada-item">
                 <h5>БРОККОЛИ И ГРИБЫ</h5>
                 <span class="translation">(Brocoli)</span>
-                <img src="images/empanada10.jpg" alt="Corn Empanada">
+                <img src="images/empanada10.jpg" alt="Эмпанада с кукурузой">
             </div>
         </div>
     </div>
