--- a/menu-ruso.html
+++ b/menu-ruso.html
@@ -185,7 +185,7 @@
                 <img src="images/empanada11.jpg" alt="Corn Empanada">
             </div>
             <div class="empanada-item">
-                <h5>БРОККОЛИ И ГРИБЫ</h5>
+                <h4>БРОККОЛИ ГРИБЫ</h4>
                 <span class="translation">(Brocoli)</span>
                 <img src="images/empanada10.jpg" alt="Эмпанада с кукурузой">
             </div>
