--- a/promociones.html
+++ b/promociones.html
@@ -73,6 +73,9 @@
         <div class="slide fade">
             <img src="promo4.jpg" alt="Promoción 4" class="promo-image">
         </div>
+        <div class="slide fade">
+            <img src="promo5.jpg" alt="Promoción 5" class="promo-image">
+        </div>
     </div>
 
     <script>
@@ -90,3 +93,4 @@
     </script>
 </body>
 </html>
+
